# PARS

./: .gitignore  .lycheeignore  404.html  CITATION.cff  CONTRIBUTING.md  MAINTAINERS.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  trame_nii_viewer.py
.devcontainer/: devcontainer.json  install_fsl.sh
.github/workflows/: docs.yml
01_ImageProcess/: index.html
02_MeshCreation/: index.html
codespaces/: index.html
data/subjects/avg-male/tmp/: T1_to_aseg.mat  (+1 more)
docs/: 01_Installation.md  01_Introduction.md  02-ImageProcess_Segment.ipynb  02_ImageProcess.ipynb  02_ImageProcessSegment.md  02_Usage.md  03_FSLeyes.md  03_FslExercise.md  04_MeshCreation.ipynb  04_MeshCreation.md  04_MeshCreation_refactored.ipynb  05_VisualiseMesh.md  06_Simulation.md  06_SimulationFiles.ipynb  06_SimulationFiles.md  07_SimulationDemo.md  codespaces.md  index.md  installation.md  outputs.md  troubleshooting.md  usage.md
docs/stylesheets/: extra.css
installation/: index.html
notebooks/: 02-ImageProcess_Segment.ipynb  02_ImageProcess.ipynb  02_ImageProcess_Segment.ipynb  04_MeshCreation.ipynb  06_SimulationFiles.ipynb  Brain_mesh_creation_VD_Feb2026.ipynb
outputs/: index.html
search/: search_index.json
src/brain_mesh_creation/: mesh_utils.py
src/dependencies/rs/: MeshSmoothing_02.cpp  bmctk.py  look_up_table.txt  material_properties.k  mesh_smoother  mesh_smoother_linux_x86_64  mesh_smoother_macos_arm64  mesh_smoother_macos_x86_64  part_list_full.k
src/dependencies/sim/: acceleration_rugby1.k
troubleshooting/: index.html
usage/: index.html
(+25 files in other folders)
